--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #212D3F;
+    background-color: var(--backcolor);
     font-family: sans-serif
 }
 
